tests/fail/fail-func4.mc
void foo() {}

void bar() {}

void printf() {} /* Should not be able to define printf */

void baz() {}

int main()
{
  return 0;
}
